--- a/online-car-selection-system/src/main/resources/application.yml
+++ b/online-car-selection-system/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/online_car_selection_system?useSSL=false&serverTimezone=UTC
     username: root
-    password: WfEdcNutanix09
+    password: 123456 # 更改成自己电脑mysql的密码
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
@@ -18,5 +18,5 @@ spring:
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**/*.xml
   type-aliases-package: com.car.onlinecarselectionsystem.entity
-  configuration:
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+#  configuration:
+#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
