--- a/online-car-selection-system/src/main/resources/application.yml
+++ b/online-car-selection-system/src/main/resources/application.yml
@@ -18,5 +18,5 @@ spring:
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**/*.xml
   type-aliases-package: com.car.onlinecarselectionsystem.entity
-#  configuration:
-#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
