--- a/import-excel-sqlserver/pom.xml
+++ b/import-excel-sqlserver/pom.xml
@@ -25,9 +25,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.33</version>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>12.6.1.jre8</version>
         </dependency>
         <dependency>
             <groupId>com.baomidou</groupId>
