--- a/import-excel-sqlserver/src/main/resources/application.properties
+++ b/import-excel-sqlserver/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-db.driverClassName=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/ordercode?useSSL=false&serverTimezone=UTC
-db.username=root
+db.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+db.url=jdbc:sqlserver://localhost:1433;databaseName=ordercode;encrypt=false
+db.username=sa
 db.password=123456
